# ArbOrder

./: ArbAssignments.cpp  ArbAssignments.h  CMakeLists.txt  Framework.cpp  Framework.h  Graph.cpp  Graph.h  Makefile  Matrix.cpp  Matrix.h  Node.cpp  Node.h  README.md  arbAssigner  run_example.sh
ExampleIn/: C0  C1  C10  C10_clusterassign.txt  C10_exprtab.txt  C10_exprtab_mat.txt  C10_speciesspecnames_clusterassign.txt  C11  C11_clusterassign.txt  C11_exprtab.txt  C11_exprtab_mat.txt  C11_speciesspecnames_clusterassign.txt  C12  C12_clusterassign.txt  C12_exprtab.txt  C12_exprtab_mat.txt  C12_speciesspecnames_clusterassign.txt  C13  C13_clusterassign.txt  C13_exprtab.txt  C13_exprtab_mat.txt  C13_speciesspecnames_clusterassign.txt  C14  C14_clusterassign.txt  C14_exprtab.txt  C14_exprtab_mat.txt  C14_speciesspecnames_clusterassign.txt  C15  C15_clusterassign.txt  C15_exprtab.txt  C15_exprtab_mat.txt  C15_speciesspecnames_clusterassign.txt  C16  C17  C18  C1_clusterassign.txt  C1_exprtab.txt  C1_exprtab_mat.txt  C1_speciesspecnames_clusterassign.txt  C2  (+41 more)
ExampleOut/: C0  C0_reorder.txt  C1  C10  C10_clusterassign.txt  C10_exprtab.txt  C10_reorder.txt  C10_speciesspecnames_clusterassign.txt  C11  C11_clusterassign.txt  C11_exprtab.txt  C11_speciesspecnames_clusterassign.txt  C12  C12_clusterassign.txt  C12_exprtab.txt  C12_reorder.txt  C12_speciesspecnames_clusterassign.txt  C13  C13_clusterassign.txt  C13_exprtab.txt  C13_speciesspecnames_clusterassign.txt  C14  C14_clusterassign.txt  C15  C16  C2  (+45 more)
Google_tests/: CMakeLists.txt  GraphTest.cpp  MatrixTest.cpp  NodeTest.cpp
(+110 files in other folders)
